--- a/public/stylesheets/partials/_subscribe.scss
+++ b/public/stylesheets/partials/_subscribe.scss
@@ -7,7 +7,7 @@
 }
 
 .passes {
-    @media (min-width: $screen-sm-min) {
+    @media (min-width: $screen-md-min) {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         grid-template-areas:
@@ -38,6 +38,13 @@ $bullet-size: 0.6rem; // 6px
         flex-direction: column;
         justify-content: space-between;
         text-align: center;
+        margin-left: $space-sm;
+        margin-right: $space-sm;
+
+        @media (min-width: $screen-md-min) {
+            margin-left: 0;
+            margin-right: 0;
+        }
 
         &--deepdive {
             grid-area: deepdiveMain;
@@ -108,6 +115,14 @@ $bullet-size: 0.6rem; // 6px
         border: $border-sm solid $color-gray-light;
         border-radius: 0 0 $border-radius-md $border-radius-md;
         box-shadow: $shadow;
+        margin-left: $space-sm;
+        margin-right: $space-sm;
+        margin-bottom: $space-xxl;
+
+        @media (min-width: $screen-md-min) {
+            margin-left: 0;
+            margin-right: 0;
+        }
 
         &--deepdive {
             grid-area: deepdiveDesc;
